<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/activity_home_drawer_your_lunch"
        android:icon="@drawable/baseline_lunch_dining_24"
        android:title="@string/your_lunch" />
    <item
        android:id="@+id/activity_home_drawer_favorite"
        android:icon="@drawable/baseline_food_bank_24"
        android:title="@string/my_favorite_places" />
    <item
        android:id="@+id/activity_home_drawer_settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings" />
    <item
        android:id="@+id/activity_home_drawer_logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/logout" />

</menu>