<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.RestaurantDetailsActivity">


    <ImageView
        android:id="@+id/resto_photo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/photo_du_restaurant" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:backgroundTint="@color/transparent"
        android:contentDescription="@string/back"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:tint="@color/white"
        android:src="@drawable/baseline_arrow_back_24"
        android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_ok_btn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="170dp"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        app:borderWidth="0dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/baseline_check_circle_24"
        app:tint="@color/grey"
        android:contentDescription="@string/ok"
        android:focusable="true" />



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="200dp"
        android:background="@color/DarkPrimary">

        <TextView
            android:id="@+id/resto_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:textColor="#ffff"
            android:textStyle="bold|italic"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/rating_bar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="30dp"
            android:numStars="5"
            android:theme="@style/RatingBarRestaurant" />

        <TextView
            android:id="@+id/resto_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:textColor="#AAFFFFFF"
            android:textStyle="bold|italic"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/action_btn"
        android:layout_marginTop="300dp"
        android:layout_width="match_parent"
        android:layout_height="70dp">


        <Button
            android:id="@+id/call_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:drawableTop="@drawable/fui_ic_phone_white_24dp"
            android:drawableTint="@color/DarkPrimary"
            android:text="@string/call"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/star_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:drawableTop="@drawable/baseline_stars_24"
            android:drawableTint="@color/DarkPrimary"
            android:text="@string/like"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <Button
            android:id="@+id/web_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:drawableTop="@drawable/baseline_public_24"
            android:drawableTint="@color/DarkPrimary"
            android:text="@string/website"
            android:textAlignment="center"
            android:textColor="@color/black"
            tools:ignore="RtlCompat" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="370dp"
        android:background="@color/grey">

    </ImageView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/workmates_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/action_btn"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:id="@+id/notationLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_below="@+id/action_btn"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/give_a_score_to_this_restaurant"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:layout_gravity="center"
            android:numStars="5"
            android:stepSize=".5"
            android:theme="@style/RatingBarRestaurantBig" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/submitScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/submit"
                android:backgroundTint="@color/DarkPrimary"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/closeScoring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:text="@string/close"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>