<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/homeScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/lunch"
        android:contentDescription="@string/home_screen" />

    <ImageView
        android:id="@+id/homeScreenFilter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="false"
        android:alpha="0.7"
        android:background="@color/black"
        android:contentDescription="@string/opacityimagefilter" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="42sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="72dp"
            android:background="@drawable/baseline_gps_fixed_24_white"
            android:contentDescription="@string/go4lunch_logo"
            android:paddingStart="80dp"
            android:paddingEnd="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/ActivityPermission_textview_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="The app needs location permission to start. Please click on the link below to authorize your phone to share its GPS chip."
        android:textColor="@color/white"
        android:textStyle="italic"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/ActivityPermission_textview_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="You have refused access to geolocation. This access is essential to start the application. Allow location access again or close the application."
        android:visibility="gone"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/ActivityPermission_textview_alertNeverAskAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="You have permanently refused to give location permission to the app. If you changed your mind, go to app settings or close the app to uninstall it."
        android:visibility="gone"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.6">


        <Button
            android:id="@+id/ActivityPermission_Button_allowGeolocation"
            android:layout_width="300dp"
            android:layout_height="64dp"
            android:backgroundTint="@color/white"
            android:text="Allow location"
            android:textColor="#000000"
            android:textStyle="bold"
            app:icon="@drawable/baseline_gps_fixed_24"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/ActivityPermission_Button_CloseApplication"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/ActivityPermission_Button_parameters"
            android:layout_width="300dp"
            android:layout_height="64dp"
            android:backgroundTint="@color/white"
            android:text="go to parameters"
            android:textColor="#000000"
            android:textStyle="bold"
            android:visibility="gone"
            app:icon="@drawable/baseline_settings_24"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/ActivityPermission_Button_CloseApplication"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/ActivityPermission_Button_CloseApplication"
            android:layout_width="300dp"
            android:layout_height="64dp"
            android:backgroundTint="@color/DarkPrimary"
            android:text="close application"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:visibility="gone"
            app:icon="@drawable/baseline_close_24"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>